Update .gitignore, add Streamlit app, and remove unused files. The .gitignore now includes entries for virtual environments, Python cache files, and specific database files. The app.py file implements a Streamlit application for generating product descriptions using a RAG pipeline. Unused files such as embedding.py, rag_pipeline.py, utils.py, and prompt.txt have been removed for a cleaner project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,44 @@
-# Python virtual environment
+# Environnement virtuel
 ai_venv/
+.venv/
+venv/
+env/
+
+# Fichiers Python
 __pycache__/
-
-# Langchain specific
-langchain_cache/
-
-# DuckDB specific
-*.duckdb
-*.duckdb-wal
-
-# ChromaDB specific
-chromadb/
-
-# Streamlit specific
-.streamlit/
-
-# General Python
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
-*.pdb
-*.egg-info/
+
+# Distribution / packaging
 dist/
 build/
+*.egg-info/
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
+# Fichiers secrets
+.env
 
-# macOS specific
-.DS_Store
-
-# Windows specific
-Thumbs.db
+# Bases de données
+*.duckdb
+*.duckdb.wal
+chroma_db/
 
 # Logs
 *.log
 
-# IDE specific
-.idea/
+# Caches de Jupyter
+.ipynb_checkpoints/
+
+# VS Code
 .vscode/
 
-# Git specific
-*.orig
-*.rej
-*.swo
-*.swp
-*.swn
-*.bak
-*.tmp
-*.temp
-*.old
-*.backup
+# Fichiers générés
+*.csv
+!data/descriptions.csv
 
-.env
+# Streamlit
+.streamlit/
+
+# Langchain
+langchain_cache/
