--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 accelerate==1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -6,7 +9,10 @@ asgiref==3.8.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.13.4
+black==25.1.0
 blinker==1.9.0
+bs4==0.0.2
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
@@ -16,27 +22,36 @@ chromadb==1.0.7
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
+dataclasses-json==0.6.7
 Deprecated==1.2.18
 distro==1.9.0
 duckdb==1.2.2
 durationpy==0.9
 fastapi==0.115.9
 filelock==3.18.0
+filetype==1.2.0
 flatbuffers==25.2.10
+frozenlist==1.6.0
 fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
+google-ai-generativelanguage==0.6.18
+google-api-core==2.24.2
 google-auth==2.39.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.1
-grpcio==1.71.0
+grpcio==1.72.0rc1
+grpcio-status==1.72.0rc1
 h11==0.16.0
+html2text==2025.4.15
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.30.2
 humanfriendly==10.0
 idna==3.10
+imageio==2.37.0
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 Jinja2==3.1.6
@@ -47,23 +62,34 @@ jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
 langchain==0.3.24
+langchain-community==0.3.23
 langchain-core==0.3.56
+langchain-google-genai==2.1.4
+langchain-huggingface==0.1.2
 langchain-text-splitters==0.3.8
 langgraph==0.4.1
 langgraph-checkpoint==2.0.25
 langgraph-prebuilt==0.1.8
 langgraph-sdk==0.1.66
 langsmith==0.3.39
+lazy_loader==0.4
+llvmlite==0.44.0
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
 mmh3==5.1.0
 mpmath==1.3.0
+multidict==6.4.3
+mypy_extensions==1.1.0
 narwhals==1.37.1
 networkx==3.4.2
+numba==0.61.2
 numpy==2.2.5
 oauthlib==3.2.2
 onnxruntime==1.21.1
+opencv-python-headless==4.11.0.86
 opentelemetry-api==1.32.1
 opentelemetry-exporter-otlp-proto-common==1.32.1
 opentelemetry-exporter-otlp-proto-grpc==1.32.1
@@ -79,17 +105,24 @@ ormsgpack==1.9.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.2.1
+platformdirs==4.3.7
+pooch==1.8.2
 posthog==4.0.1
-protobuf==5.29.4
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==6.31.0rc2
 psutil==7.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.4
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.1
+PyMatting==1.1.13
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
@@ -99,6 +132,7 @@ pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
+rembg==2.0.65
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
@@ -106,6 +140,7 @@ rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9.1
 safetensors==0.5.3
+scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.1.0
@@ -114,12 +149,14 @@ shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.40
 starlette==0.45.3
 streamlit==1.45.0
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tifffile==2025.3.30
 tokenizers==0.21.1
 toml==0.10.2
 torch==2.7.0
@@ -127,16 +164,19 @@ tornado==6.4.2
 tqdm==4.67.1
 transformers==4.51.3
 typer==0.15.3
+typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
+validators==0.35.0
 watchdog==6.0.0
 watchfiles==1.0.5
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
 xxhash==3.5.0
+yarl==1.20.0
 zipp==3.21.0
 zstandard==0.23.0
