--- a/requirements.txt
+++ b/requirements.txt
@@ -40,8 +40,8 @@ google-api-core==2.24.2
 google-auth==2.39.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.1
-grpcio==1.72.0rc1
-grpcio-status==1.72.0rc1
+grpcio-status<1.72
+grpcio<1.72
 h11==0.16.0
 html2text==2025.4.15
 httpcore==1.0.9
@@ -112,6 +112,7 @@ pooch==1.8.2
 posthog==4.0.1
 propcache==0.3.1
 proto-plus==1.26.1
+protobuf>=5.29,<6
 psutil==7.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
